...
                    }
                }
            }
            .navigationTitle("Rental Properties")
            .toolbar {
                ToolbarItem(placement: .topBarTrailing) {
                    Button("Add") {
                        showingAddScreen.toggle()
                    }
                }
            }
            
            .sheet(isPresented: $showingAddScreen) {
...
